# trajectory-forcast

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tf/: __init__.py  cli.py  config.py  drawing.py  forecasting.py  inference.py  tracker.py  utils.py
